--- a/index.html
+++ b/index.html
@@ -12,23 +12,25 @@
 </head>
 <body>
     <header>
-        <div class="header-container">
-            <a href="#">Fitness</a>
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Service</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">About</a></li>
-                </ul>
-            </nav>
-        </div>
-
-        <h1>Tapos</h1>
+        <section class="header">
+            <div class="header-container">
+                <a class="header-logo" href="#">Fitness</a>
+                <nav>
+                    <ul>
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="#">Service</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">About</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </section>
     </header>
+
     <main>
 
     </main>
+
     <footer>
 
     </footer>
