The habit section has been completed

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fitness Health</title>
     <link rel="stylesheet" href="Style/style.css" />
-    <!-- font URL -->
-    <link href="https://fonts.cdnfonts.com/css/miama" rel="stylesheet" />
-    <link rel="stylesheet" href="Style/desktops.css">
+    <!-- css file linkup -->
+    <link rel="stylesheet" href="Style/desktops.css" />
     <link rel="stylesheet" href="Style/tablet.css" />
     <link rel="stylesheet" href="Style/mobail.css" />
 
@@ -61,19 +60,49 @@
               <p>Free Workout Videos</p>
             </div>
             <div class="tutorial-videos">
-                <div class="circle"></div>
+              <div class="circle"></div>
               <div class="tutorial-text-box">
                 <h1>350+</h1>
                 <p>Video tutorial</p>
               </div>
-              
             </div>
           </div>
         </div>
       </section>
     </header>
-
-    <main></main>
+    <main>
+      <section class="habits">
+        <div class="habits-section-heading-box">
+          <h1 class="section-title">Change Your Habits</h1>
+          <p class="section-description">
+            We believe fitness should be accessible to everyone, everywhere,
+            regardless of income or <br> access to a gym.
+          </p>
+        </div>
+        <div class="habits-container">
+            <div class="habit">
+                <img src="./images/habit-1.png" alt="">
+                <h3>Movement</h3>
+                <p>We believe fitness should be accessible to everyone</p>
+            </div>
+            <div class="habit">
+                <img src="./images/habit-2.png" alt="">
+                <h3>Time</h3>
+                <p>We believe fitness should be accessible to everyone</p>
+            </div>
+            <div class="habit">
+                <img src="./images/image 4.png" alt="">
+                <h3>Practice</h3>
+                <p>WWe believe fitness should be accessible to everyone</p>
+            </div>
+            <div class="habit">
+                <img src="./images/image 4.png" alt="">
+                <h3>Weight Loss</h3>
+                <p>WWe believe fitness should be accessible to everyone</p>
+            </div>
+        </div>
+      </section>
+    </main>
 
     <footer></footer>
   </body>
