The run easily section has been completed

--- a/index.html
+++ b/index.html
@@ -76,30 +76,47 @@
           <h1 class="section-title">Change Your Habits</h1>
           <p class="section-description">
             We believe fitness should be accessible to everyone, everywhere,
-            regardless of income or <br> access to a gym.
+            regardless of income or <br />
+            access to a gym.
           </p>
         </div>
         <div class="habits-container">
-            <div class="habit">
-                <img src="./images/habit-1.png" alt="">
-                <h3>Movement</h3>
-                <p>We believe fitness should be accessible to everyone</p>
-            </div>
-            <div class="habit">
-                <img src="./images/habit-2.png" alt="">
-                <h3>Time</h3>
-                <p>We believe fitness should be accessible to everyone</p>
-            </div>
-            <div class="habit">
-                <img src="./images/image 4.png" alt="">
-                <h3>Practice</h3>
-                <p>WWe believe fitness should be accessible to everyone</p>
-            </div>
-            <div class="habit">
-                <img src="./images/image 4.png" alt="">
-                <h3>Weight Loss</h3>
-                <p>WWe believe fitness should be accessible to everyone</p>
-            </div>
+          <div class="habit">
+            <img src="./images/habit-1.png" alt="" />
+            <h3>Movement</h3>
+            <p>We believe fitness should be accessible to everyone</p>
+          </div>
+          <div class="habit">
+            <img src="./images/habit-2.png" alt="" />
+            <h3>Time</h3>
+            <p>We believe fitness should be accessible to everyone</p>
+          </div>
+          <div class="habit">
+            <img src="./images/image 4.png" alt="" />
+            <h3>Practice</h3>
+            <p>WWe believe fitness should be accessible to everyone</p>
+          </div>
+          <div class="habit">
+            <img src="./images/image 4.png" alt="" />
+            <h3>Weight Loss</h3>
+            <p>WWe believe fitness should be accessible to everyone</p>
+          </div>
+        </div>
+      </section>
+      <section class="run-easily">
+        <div class="run-easily-container">
+          <div class="run-easily-text-box">
+            <h1 class="section-title">Run an Extra Mile Easily</h1>
+            <p class="section-description">
+              We believe fitness should be accessible to everyone, everywhere,
+              regardless of income or access to a gym. With hundreds of
+              professional workouts.
+            </p>
+            <button class="primary-btn run-btn">Join now!</button>
+          </div>
+          <div class="run-easily-image-box">
+            <img src="./images/run.jpg" alt="">
+          </div>
         </div>
       </section>
     </main>
