--- a/index.html
+++ b/index.html
@@ -115,7 +115,82 @@
             <button class="primary-btn run-btn">Join now!</button>
           </div>
           <div class="run-easily-image-box">
-            <img src="./images/run.jpg" alt="">
+            <img src="./images/run.jpg" alt="" />
+          </div>
+        </div>
+      </section>
+
+      <section class="bmi-calculator">
+        <div class="bmi-heading-box">
+          <h2 class="section-title">BMI Calculator</h2>
+          <p class="section-description">
+            We believe fitness should be accessible to everyone, everywhere,
+            regardless of income or access to a gym.
+          </p>
+        </div>
+        <div class="bmi-calculator-bg">
+          <div class="bmi-calculator-container">
+            <div class="bmi-chart-box">
+              <h2 class="table-title">BMI Calculator Chart</h2>
+              <table>
+                <tr>
+                  <th>BMI</th>
+                  <th>Weight Status</th>
+                </tr>
+                <tr>
+                  <td>Below 18.5</td>
+                  <td>Underweight</td>
+                </tr>
+                <tr>
+                  <td>18.5 - 24.9</td>
+                  <td>Healthy</td>
+                </tr>
+                <tr>
+                  <td>25.0 - 29.9</td>
+                  <td>Overweight</td>
+                </tr>
+                <tr>
+                  <td>30.0 - and Above</td>
+                  <td>Obese</td>
+                </tr>
+              </table>
+            </div>
+            <div class="bmi-calculate-box">
+              <h3 class="bmi-calculate-title">Calculate your BMI</h3>
+              <p class="bmi-calculate-description">
+                We believe fitness should be accessible to everyone, everywhere,
+                regardless of income or access to a gym.
+              </p>
+
+              <div class="bmi-input-box">
+                <form >
+                  <div class="input-container-box">
+                    <div class="input-box-one">
+                      <input type="text" placeholder="Height/cm" />
+                      <input type="text" placeholder="Age" />
+                    </div>
+                    <div class="input-box-two">
+                      <input type="text" placeholder="Weight/kg" /><br>
+                      <select>
+                        <option>Sex</option>
+                        <option>Male</option>
+                        <option>Female</option>
+                      </select>
+                    </div>
+                    
+                  </div>
+
+                  <select>
+                    <option>Select an activity factor</option>
+                    <option>Dumbbell exercises</option>
+                    <option>Barbell exercises</option>
+                    <option>Kettlebell workouts</option>
+                    <option>Chest press machine</option></select
+                  ><br />
+                  <input type="submit" class="primary-btn calculate-btn" value="Calculate" />
+                </form>
+              </div>
+            </div>
           </div>
         </div>
       </section>
