The review section has been completed

--- a/index.html
+++ b/index.html
@@ -263,7 +263,38 @@
           </div>
         </div>
       </section>
+      <section class="review-section">
+        <div class="our-review-heading">
+          <h2 class="section-title">Our Reviews</h2>
+          <p class="section-description">service offers modern equipment, knowledgeable trainers, and a variety of fitness classes, making it ideal for all fitness levels.</p>
+        </div>
+        <div class="our-reviews-container">
+          <div class="review">
+           <div class="image-box">
+            <img src="./images/review-1.jpg" alt="">
+           </div>
+            <h3>John</h3>
+            <p>Many members praise the gym's clean and well-maintained equipment, noting that it provides a comfortable environment for workouts​
+            </p>
+          </div>
+          <div class="review">
+           <div class="image-box">
+            <img src="./images/review-2.jpg" alt="">
+           </div>
+            <h3>Michael</h3>
+            <p>Users appreciate the knowledgeable trainers who offer tailored workout plans, helping them achieve their fitness goals more effectively</p>
+          </div>
+          <div class="review">
+           <div class="image-box">
+            <img src="./images/review-3.jpg" alt="">
+           </div>
+            <h3>David</h3>
+            <p>Customers love the diverse range of fitness classes available, from high-intensity interval training to yoga, making it easy to find </p>
+          </div>
+        </div>
+      </section>
     </main>
+
 
     <footer>
       <div class="footer">
